# huntington-research-assistant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: streamlit_app.py
docs/: ACCESSIBILITY.md  CONTRIBUTING.md  DIGITAL_BIOLOGY_LAB.md  KNOWLEDGE_GRAPH.md  LOCAL_ESM2_EXPERIMENT.md  NORWEGIAN_LANGUAGE.md  PROJECT_STATE.md  PROTEIN_INTELLIGENCE_V0_7.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_V0_10.md  RELEASE_CHECKLIST_V0_7.md  ROADMAP.md  SAFETY.md  STREAMLIT_TROUBLESHOOTING.md  V0_11_PROVIDER_PARITY.md  V0_12_BIONEMO_RUNTIME.md  V0_8_BLUEPRINT_PLAN.md  V0_9_PROVIDER_ADAPTERS.md
docs/screenshots/: README.md
labs/: README.md  __init__.py  experiment-manifest.example.json
labs/blueprint_experiments/: PROVIDER_CONTRACT.md  README.md  __init__.py  __main__.py  manifests.py  providers.py  registry.py
labs/blueprint_experiments/examples/: mock-htt-manifest.json
labs/protein_intelligence/: PROVIDER_CONTRACT.md  README.md  __init__.py  __main__.py  bionemo_code_review.py  bionemo_execution.py  bionemo_gpu_probe.py  bionemo_image_review.py  bionemo_preflight.py  bionemo_recipes_execution.py  bionemo_recipes_readiness.py  bionemo_recipes_review.py  embeddings.py  entity_mapping.py  identifiers.py  local_esm2.py  manifests.py  provider_parity.py  registry.py  report_cli.py  report_validation.py  reports.py  sequences.py  targets.py
labs/protein_intelligence/bionemo_recipes_runtime/: Dockerfile  README.md  build_image.sh  fetch_assets.py  run_fixture.py  run_fixture.sh  verify_assets.py
labs/protein_intelligence/bionemo_runtime/: README.md  export_hra_result.py  prepare_checkpoint.py  run_container.sh  run_inside_container.sh
labs/protein_intelligence/examples/: entities.json  sources.json
labs/protein_intelligence/fixtures/: bdnf.fragment.fasta  htt.fragment.fasta  nefl.fragment.fasta
src/hra/: __init__.py  cache.py  deduplication.py  evidence.py  export.py  filters.py  i18n.py  knowledge_graph.py  models.py  norwegian_language.py  query.py  safety.py  summarization.py  summary_store.py  tagging.py  trial_filters.py  ui_keys.py
src/hra/clients/: __init__.py  clinical_trials.py  europe_pmc.py  pubmed.py
tests/: test_app.py  test_bionemo_code_review.py  test_bionemo_execution.py  test_bionemo_gpu_probe.py  test_bionemo_image_review.py  test_bionemo_preflight.py  test_bionemo_recipes_execution.py  test_bionemo_recipes_readiness.py  test_bionemo_recipes_review.py  test_blueprint_experiments.py  test_blueprint_providers.py  test_blueprint_registry.py  test_cache.py  test_clinical_trials.py  test_deduplication.py  test_europe_pmc.py  test_evidence.py  test_export.py  test_filters.py  test_i18n.py  test_knowledge_graph.py  test_local_esm2.py  test_models.py  test_norwegian_language.py  test_protein_intelligence_lab.py  test_protein_intelligence_v07.py  test_protein_report_cli.py  test_protein_report_validation.py  test_provider_parity.py  test_pubmed.py  test_query.py  test_summarization.py  test_summary_store.py  test_tagging.py  test_trial_filters.py  test_ui_keys.py  test_version.py
tests/fixtures/: entity_extraction_cases.json  evidence_classification_cases.json  norwegian_summary_cases.json
