[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huntington-research-assistant"
version = "0.11.0"
description = "An open-source Streamlit app for navigating Huntington's disease research and registered clinical trials."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Huntington Research Assistant contributors" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "requests>=2.31,<3",
  "streamlit>=1.40,<2",
]

[project.urls]
Homepage = "https://github.com/Runarthe/huntington-research-assistant"
Repository = "https://github.com/Runarthe/huntington-research-assistant"
Issues = "https://github.com/Runarthe/huntington-research-assistant/issues"

[project.optional-dependencies]
dev = [
  "build>=1,<2",
  "pytest>=8,<9",
]
scientific-ai = [
  "safetensors>=0.4,<1",
  "torch>=2.6,<3",
  "transformers>=4.44,<6",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["hra*", "labs*"]
exclude = ["tests*", "docs*", "app*"]

[tool.setuptools.package-data]
"labs.blueprint_experiments" = ["README.md", "PROVIDER_CONTRACT.md", "examples/*.json"]
"labs.protein_intelligence" = ["README.md", "PROVIDER_CONTRACT.md", "fixtures/*.fasta", "examples/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
